--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -29,7 +29,7 @@
             <button class="btn" type="submit"><%if(editing){%>Update Product<%}else{%>Add Product<%}%></button>
 
             <%if(editing){%>
-                <input type="hidden" name="productId" value="<%=product.id%>">
+                <input type="hidden" name="productId" value="<%=product._id%>">
             <%}%>
         </form>
     </main>
