--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -7,9 +7,9 @@
             <%if(products.length>0){%>
                 <ul>
                     <%for(prod of products){%>
-                        <li><%=prod.title%> (<%=prod.cartItem.quantity%>)
+                        <li><%=prod.title%> (<%=prod.quantity%>)
                         <form action="/cart-delete-item" method="post">
-                            <input type="hidden" name="productId" value="<%=prod.id%>">
+                            <input type="hidden" name="productId" value="<%=prod.productId%>">
                             <button class="btn" type="submit">Delete</button>
                         </form></li>
                         <%}%>
