--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -8,11 +8,11 @@
                 <%}else{%>
                     <%for(order of orders){%>
                         <ul>
-                            <h1># <%=order.id%>
-                            </h1>
+                            <h5># <%=order._id%>
+                            </h5>
                         </ul>
-                        <%order.products.forEach(item=>{%>
-                            <li><%=item.title%>(<%=item.orderItem.quantity%>)</li>
+                        <%order.orderItem.forEach(item=>{%>
+                            <li><%=item.title%>(<%=item.quantity%>)</li>
                                 <%})%>
                     <%}%>
                 <%}%>
